--- a/UCRest/phpspec.yml
+++ b/UCRest/phpspec.yml
@@ -1,5 +1,5 @@
 suites:
     main:
-        namespace: App
-        psr4_prefix: App
+        namespace: UCRest
+        psr4_prefix: UCRest
         src_path: app
